# notification-producer-api

./: .gitignore  Makefile  README.md  docker-compose.yaml
notification-system/services/notification-producer-api/: Dockerfile  Makefile  pyproject.toml
notification-system/services/notification-producer-api/src/notification_producer_api/: __init__.py  config.py  main.py
notification-system/services/notification-producer-api/src/notification_producer_api/api/: routes.py
notification-system/services/notification-producer-api/src/notification_producer_api/application/: event_service.py
notification-system/services/notification-producer-api/src/notification_producer_api/domain/: events.py
notification-system/services/notification-producer-api/src/notification_producer_api/infrastructure/: kafka_producer.py
notification-system/services/notification-service/: Dockerfile  pyproject.toml
notification-system/services/notification-service/src/infrastructure/: database.py  kafka_consumer.py
notification-system/services/notification-service/src/notification_service/: config.py  main.py
notification-system/services/notification-service/src/notification_service/api/: routes.py
notification-system/services/notification-service/src/notification_service/domain/: models.py
notification-system/services/notification-service/src/notification_service/infrastructure/: database.py  kafka_consumer.py
notification-system/services/notification-service/src/notification_service/services/: notification_service.py
