[project]
name = "notification-producer-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WillamesCampos", email = "willwjccampos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi>=0.122.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
notification-producer-api = "notification_producer_api:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
